--- a/generators/module/templates/base/package.json.hbs
+++ b/generators/module/templates/base/package.json.hbs
@@ -15,6 +15,7 @@
     "framer-motion": "^10.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
